<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/renewable2"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RENEWABLE_ENERGY_QUIZ"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_margin="16dp" />
        </RelativeLayout>

        <!--Name Input-->
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Please_enter_your_name"
            android:inputType="textCapWords" />


        <!--Question 1-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_1" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/Coal_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/Coal" />

        <CheckBox
            android:id="@+id/Hydro_Power"
            style="@style/Checkbox_Answer"
            android:text="@string/Hydro_Power" />

        <CheckBox
            android:id="@+id/Uranium_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/Uranium" />

        <CheckBox
            android:id="@+id/Solar_Radiation_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/Solar_Radiation" />

        <CheckBox
            android:id="@+id/Geothermal_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/Geothermal" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 2-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_2" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_2_1_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_1" />

            <RadioButton
                android:id="@+id/answer_2_2_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_2" />

            <RadioButton
                android:id="@+id/answer_2_3_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_3" />

            <RadioButton
                android:id="@+id/answer_2_4_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_2_4" />
        </RadioGroup>

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 3-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_3" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/oil_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/Oil" />

            <RadioButton
                android:id="@+id/wood_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/Wood" />

            <RadioButton
                android:id="@+id/natural_gas_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/Natural_Gas" />

            <RadioButton
                android:id="@+id/petrol_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/Petrol" />

            <RadioButton
                android:id="@+id/diesel_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/Diesel" />
        </RadioGroup>

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 4-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_4" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/answer41"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_4_1" />

        <CheckBox
            android:id="@+id/answer42"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_4_2" />

        <CheckBox
            android:id="@+id/answer43"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_4_3" />

        <CheckBox
            android:id="@+id/answer44"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_4_4" />

        <CheckBox
            android:id="@+id/answer45"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_4_5" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 5-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_5" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_5" />

        <CheckBox
            android:id="@+id/answer_5_1_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_1" />

        <CheckBox
            android:id="@+id/answer_5_2_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_2" />

        <CheckBox
            android:id="@+id/answer_5_3_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_3" />

        <CheckBox
            android:id="@+id/answer_5_4_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_4" />

        <CheckBox
            android:id="@+id/answer_5_5_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_5_5" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 6-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_6" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_6" />

        <RadioGroup
            android:id="@+id/question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_6_1_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_6_1" />

            <RadioButton
                android:id="@+id/answer_6_2_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_6_2" />

            <RadioButton
                android:id="@+id/answer_6_3_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_6_3" />

            <RadioButton
                android:id="@+id/answer_6_4_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_6_4" />

            <RadioButton
                android:id="@+id/answer_6_5_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_6_5" />
        </RadioGroup>

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 7-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_7" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/Question_7" />

        <RadioGroup
            android:id="@+id/question_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_7_1_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_7_1" />

            <RadioButton
                android:id="@+id/answer_7_2_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_7_2" />

            <RadioButton
                android:id="@+id/answer_7_3_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_7_3" />

            <RadioButton
                android:id="@+id/answer_7_4_radiobutton"
                style="@style/RadioButton_Answer"
                android:text="@string/answer_7_4" />
        </RadioGroup>

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 8-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_8" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_8" />

        <CheckBox
            android:id="@+id/answer_8_1_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_1" />

        <CheckBox
            android:id="@+id/answer_8_2_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_2" />

        <CheckBox
            android:id="@+id/answer_8_3_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_3" />

        <CheckBox
            android:id="@+id/answer_8_4_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_4" />

        <CheckBox
            android:id="@+id/answer_8_5_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_5" />

        <CheckBox
            android:id="@+id/answer_8_6_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_8_6" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 9-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_9" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_9" />

        <CheckBox
            android:id="@+id/answer_9_1_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_1" />

        <CheckBox
            android:id="@+id/answer_9_2_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_2" />

        <CheckBox
            android:id="@+id/answer_9_3_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_3" />

        <CheckBox
            android:id="@+id/answer_9_4_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_4" />

        <CheckBox
            android:id="@+id/answer_9_5_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_5" />

        <CheckBox
            android:id="@+id/answer_9_6_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_9_6" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Question 10-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_10" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_10" />

        <CheckBox
            android:id="@+id/answer_10_1_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_1" />

        <CheckBox
            android:id="@+id/answer_10_2_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_2" />

        <CheckBox
            android:id="@+id/answer_10_3_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_3" />

        <CheckBox
            android:id="@+id/answer_10_4_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_4" />

        <CheckBox
            android:id="@+id/answer_10_5_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_5" />

        <CheckBox
            android:id="@+id/answer_10_6_checkbox"
            style="@style/Checkbox_Answer"
            android:text="@string/answer_10_6" />

        <Button
            android:id="@+id/end_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="end_Test"
            android:text="@string/end_test" />

        <!--Line-->
        <View style="@style/Line">

        </View>

        <!--Test Result-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/test_result" />

        <TextView
            android:id="@+id/test_result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=" "
            android:textColor="@android:color/black" />

    </LinearLayout>


</ScrollView>


